some changes for checklist

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <section class="section contacts animation--fog" id="contacts">
           <h2 class="contacts__title">Contact Us</h2>
           <div class="contacts__wrapper">
-            <form class="contacts__form" action=" " method="post">
+            <form class="contacts__form" action=" " method="post" onsubmit="this.reset(); return false;">
               <input type="text" class="contacts__name form__input input-name" name="contacts__name" placeholder="Name">
               <input type="email" class="contacts__email form__input input-email" name="contacts__email" placeholder="Email">
               <textarea name="contacts__message" class="contacts__message form__input input-message" id="contacts__message" placeholder="Message"></textarea>
