--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>MyBike</title>
     <link rel="icon" type="image/x-icon" href="/favicon.a59dbb6c.ico">
     <link rel="stylesheet" href="/layout_landing-page.971c2ea4.css">
-    <script src="/layout_landing-page.f75de5e1.js" defer=""></script>
+    <link rel="preload" href="/hero__bg-bicycle-320.f02d33aa.webp" as="image" media="(min-width: 320px) and (max-width: 743px)" type="image/webp">
+    <link rel="preload" href="/hero__bg-bicycle-740.14f0b4f1.webp" as="image" media="(min-width: 744px) and (max-width: 1023px)" type="image/webp">
+
+    <link rel="preload" href="/hero__bg-bicycle.9a1795f1.webp" as="image" media="(min-width: 1024px)" type="image/webp">
+    <script src="/layout_landing-page.f75de5e1.js"></script>
   </head>
   <!-- #endregion -->
   <body class="body" id="home">
@@ -217,6 +221,6 @@
     </main>
 
     <footer class="footer"></footer>
-    <script src="/layout_landing-page.579125c3.js"></script>
+    <script src="/layout_landing-page.579125c3.js" defer=""></script>
   <script src="/layout_landing-page.59712999.js"></script></body>
 </html>
