fixed contacts, phone wrap

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               </button>
             </form>
             <address class="business-card">
-              <div class="phone-wrapper">
+              <div class="business-card__phone-wrapper">
                 <p class="pnone-label business-card-label">phone</p>
                 <a href="tel: +123455555555" class="business-card-phone">
                 +1 234 5555-55-55
