changed margin-bottom to paddings for contacts, cause of sticky  footer behaviour

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
           <h2 class="contacts__title">Contact Us</h2>
           <div class="contacts__wrapper">
             <form class="contacts__form" action=" " method="post" onsubmit="this.reset(); return false;">
-              <input type="text" class="contacts__name form__input input-name" name="contacts__name" placeholder="Name">
-              <input type="email" class="contacts__email form__input input-email" name="contacts__email" placeholder="Email">
-              <textarea name="contacts__message" class="contacts__message form__input input-message" id="contacts__message" placeholder="Message"></textarea>
+              <input type="text" class="contacts__name form__input input-name" name="contacts__name" placeholder="Name" required="">
+              <input type="email" class="contacts__email form__input input-email" name="contacts__email" placeholder="Email" required="">
+              <textarea name="contacts__message" class="contacts__message form__input input-message" id="contacts__message" placeholder="Message" required=""></textarea>
               <button formaction="https://httpbin.org/post" type="submit" class="form__btn btn-send">
               Send
               </button>
