--- a/index.html
+++ b/index.html
@@ -1,226 +1,1 @@
-<!-- #region Head -->
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyBike</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.a59dbb6c.ico">
-    <link rel="stylesheet" href="/layout_landing-page.971c2ea4.css">
-
-    <link rel="preload" href="/hero__bg-bicycle.9a1795f1.webp" as="image" media="(min-width: 1024px)" type="image/webp">
-    <link rel="preload" href="/hero__bg-bicycle-740.14f0b4f1.webp" as="image" media="(min-width: 744px) and (max-width: 1023px)" type="image/webp">
-    <link rel="preload" href="/hero__bg-bicycle-320.f02d33aa.webp" as="image" media="(min-width: 320px) and (max-width: 743px)" type="image/webp">
-    <script src="/layout_landing-page.f75de5e1.js"></script>
-  </head>
-  <!-- #endregion -->
-  <body class="body" id="home">
-
-    <!-- #region Pop-up -->
-    <div class="pop-up__menu close fog">
-      <div class="pop-up__head">
-        <div class="pop-up__logo-wrapper">
-          <img src="/MyBiKE-black.0b32e6c9.svg" alt="MyBike Logo black color" class="pop-up__logo">
-        </div>
-        <button class="pop-up__close-btn"></button>
-      </div>
-
-      <nav class="navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="#home" class="navigation__link">home</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#about" class="navigation__link"> about us</a>
-
-          </li>
-          <li class="navigation__item">
-            <a href="#bikes" class="navigation__link">bikes</a>
-
-          </li>
-          <li class="navigation__item">
-            <a href="#details" class="navigation__link">details</a>
-
-          </li>
-          <li class="navigation__item">
-            <a href="#contacts" class="navigation__link">contacts</a>
-
-          </li>
-        </ul>
-        <div class="phone-and-cta">
-          <a href="tel:+123455555555" class="pop-up__phone">+1 234 5555-55-55</a>
-          <span class="call-to-order">Book a test ride</span>
-        </div>
-      </nav>
-    </div>
-
-    <!-- #endregion -->
-    <!-- #region Header -->
-    <header class="header">
-      <div class="logo-wrapper">
-        <img src="/MyBiKE.329d578f.svg" class="logo" alt="MyBike Logo">
-      </div>
-      <div class="btn-menu">
-        <div class="phone-wrapper">
-          <a href="tel:+12345555555" class="phone-link">
-            +1 234 555-55-55
-          </a>
-          <button class="btn-phone header__btn"></button>
-        </div>
-        <button class="btn-burger header__btn open"></button>
-      </div>
-    </header>
-
-    <!-- #endregion -->
-    <main class="main ">
-      <!-- #region Hero -->
-      <section class="section hero " id="about">
-        <h1 class="hero__title ">Take the Streets</h1>
-
-      </section>
-      <!-- #endregion -->
-      <div class="container">
-        <!-- #region Compare Bikes -->
-        <section class="section bikes animation--slide-left" id="bikes">
-          <div class="bikes__moto">
-            <h2 class="bikes__title">move free</h2>
-            <p class="bikes__subtitle">
-            Shift your ride, not gears. Find the fastest way to move in the city
-            as the bike adapts intuitively to power the speed you need.
-            </p>
-          </div>
-
-          <div class="bikes__slider">
-            <h2 class="bikes__slider-title">Compare Bikes</h2>
-            <ul class="bikes__slider-list">
-              <li class="bikes__slider-item">
-                <img src="/sporty-card1.f15bae69.jpg" alt="Sporty 4 image" class="bikes__slider-item-img">
-                <p class="slider__card-title">Sporty 4</p>
-                <p class="slider__card-subscribe">
-                The iconic frame brought to a new performance height as a
-                sporty, active ride.
-                </p>
-                <p class="slider__card-price">$ 2 590</p>
-              </li>
-              <li class="bikes__slider-item">
-                <img src="/town-rider-card2.47d4c31f.jpg" alt="Ride in town ST image" class="bikes__slider-item-img">
-                <p class="slider__card-title">Ride in town ST</p>
-                <p class="slider__card-subscribe">
-                An open frame for an upright riding position as the most
-                comfortable ride in town.
-                </p>
-                <p class="slider__card-price">$ 2 590</p>
-              </li>
-              <li class="bikes__slider-item">
-                <img src="/agile-card3.459fd53a.jpg" alt="Agile ride 3 image" class="bikes__slider-item-img">
-                <p class="slider__card-title">Agile ride 3</p>
-                <p class="slider__card-subscribe">
-                The lightweight frame that has earned its street tread as a
-                sleek, agile ride.
-                </p>
-                <p class="slider__card-price">$ 2 090</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <!-- #endregion -->
-        <!-- #region Details -->
-        <section class="section details animation--slide-right" id="details">
-          <h2 class="details__title">the details</h2>
-          <div class="details__advantage-wrapp">
-            <div class="details__advantage-photoframe">
-              <img src="/auto-unlock1-desktop.4e2506bf.webp" alt="phone-holder" class="details_advantage-photo">
-              <img src="/auto-unlock2-desktop.7305133b.webp" alt="brake-levers" class="details_advantage-photo">
-            </div>
-            <div class="details__advantage-info">
-              <h3 class="details__advantage-title">Auto Unlock</h3>
-              <p class="details__advantage-description">
-              The app senses when you're nearby to unlock automatically. GPS
-              tracking so you know where your bike is and can track it anytime.
-              </p>
-            </div>
-          </div>
-          <div class="details__advantage-wrapp">
-            <div class="details__advantage-photoframe">
-              <img src="/lights1-desktop.4374eb94.webp" alt="backLights" class="details_advantage-photo">
-              <img src="/lights2-desktop.622c0782.webp" alt="frontLigths" class="details_advantage-photo">
-            </div>
-
-            <div class="details__advantage-info">
-              <h3 class="details__advantage-title">Range & Integrated lights</h3>
-              <p class="details__advantage-description">
-              The removable battery has up to 70km battery autonomy and weighs
-              only 2.4 kg. Lights integrated into the frame give you always-on
-              visibility day and night.
-              </p>
-            </div>
-          </div>
-          <div class="details__advantage-wrapp ">
-            <div class="details__advantage-photoframe">
-              <img src="/brakes2-desktop.6e4d7d8f.webp" alt="frontLigths" class="details_advantage-photo">
-              <img src="/brakes1-desktop.556ac431.webp" alt="backLights" class="details_advantage-photo">
-            </div>
-            <div class="details__advantage-info">
-              <h3 class="details__advantage-title">
-              Hydraulic disc brakes & Lightweight
-              </h3>
-
-              <p class="details__advantage-description">
-              Brakes with total stopping power the second you make contact. The
-              removable battery has up to 70km battery autonomy and weighs only
-              2.4 kg. Lights integrated into the frame give you always-on
-              visibility day and night.
-              </p>
-            </div>
-          </div>
-          <button class="details__button-explore">Explore</button>
-        </section>
-        <!-- #endregion -->
-        <!-- #region Contacts -->
-        <section class="section contacts animation--fog" id="contacts">
-          <h2 class="contacts__title">Contact Us</h2>
-          <div class="contacts__wrapper">
-            <form class="contacts__form" action=" " method="post" onsubmit="this.reset(); return false;">
-              <input type="text" class="contacts__name form__input input-name" name="contacts__name" placeholder="Name" required="">
-              <input type="email" class="contacts__email form__input input-email" name="contacts__email" placeholder="Email" required="">
-              <textarea name="contacts__message" class="contacts__message form__input input-message" id="contacts__message" placeholder="Message" required=""></textarea>
-              <button formaction="https://httpbin.org/post" type="submit" class="form__btn btn-send">
-              Send
-              </button>
-            </form>
-            <address class="business-card">
-              <div class="business-card__phone-wrapper">
-                <p class="pnone-label business-card-label">phone</p>
-                <a href="tel: +123455555555" class="business-card-phone">
-                +1 234 5555-55-55
-                </a>
-              </div>
-
-              <div class="email-wrapper">
-                <p class="email-label business-card-label">email</p>
-                <a href="mailto:hello@miami.com" class="business-card-email">
-                hello@miami.com
-                </a>
-              </div>
-
-              <div class="address-wrapper">
-                <p class="address-label business-card-label">address</p>
-                <a target="_blank" href="https://maps.app.goo.gl/8so69WYqQd9UQMY58" class="business-card-address">
-                400 first ave.
-                  <br>
-                suite 700
-                  <br>
-                Minneapolis, MN 55401
-                </a>
-              </div>
-            </address>
-          </div>
-        </section>
-        <!-- #endregion -->
-      </div>
-    </main>
-
-    <footer class="footer"></footer>
-    <script src="/layout_landing-page.579125c3.js" defer=""></script>
-  <script src="/layout_landing-page.59712999.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>MyBike</title><link rel="icon" type="image/x-icon" href="favicon.d8cf56f8.ico"><link rel="stylesheet" href="layout_landing-page.670b8a6d.css"><link rel="preload" href="hero__bg-bicycle.c31ea204.webp" as="image" media="(min-width: 1024px)" type="image/webp"><link rel="preload" href="hero__bg-bicycle-740.c1d07251.webp" as="image" media="(min-width: 744px) and (max-width: 1023px)" type="image/webp"><link rel="preload" href="hero__bg-bicycle-320.19b3df68.webp" as="image" media="(min-width: 320px) and (max-width: 743px)" type="image/webp"><script src="layout_landing-page.4a5fbcc0.js"></script></head><body class="body" id="home">  <div class="close fog pop-up__menu"> <div class="pop-up__head"> <div class="pop-up__logo-wrapper"> <img src="MyBiKE-black.bfc13d5e.svg" alt="MyBike Logo black color" class="pop-up__logo"> </div> <button class="pop-up__close-btn"></button> </div> <nav class="navigation"> <ul class="navigation__list"> <li class="navigation__item"> <a href="#home" class="navigation__link">home</a> </li> <li class="navigation__item"> <a href="#about" class="navigation__link"> about us</a> </li> <li class="navigation__item"> <a href="#bikes" class="navigation__link">bikes</a> </li> <li class="navigation__item"> <a href="#details" class="navigation__link">details</a> </li> <li class="navigation__item"> <a href="#contacts" class="navigation__link">contacts</a> </li> </ul> <div class="phone-and-cta"> <a href="tel:+123455555555" class="pop-up__phone">+1 234 5555-55-55</a> <span class="call-to-order">Book a test ride</span> </div> </nav> </div>   <header class="header"> <div class="logo-wrapper"> <img src="MyBiKE.93f23102.svg" class="logo" alt="MyBike Logo"> </div> <div class="btn-menu"> <div class="phone-wrapper"> <a href="tel:+12345555555" class="phone-link"> +1 234 555-55-55 </a> <button class="btn-phone header__btn"></button> </div> <button class="btn-burger header__btn open"></button> </div> </header>  <main class="main">  <section class="hero section" id="about"> <h1 class="hero__title">Take the Streets</h1> </section>  <div class="container">  <section class="animation--slide-left bikes section" id="bikes"> <div class="bikes__moto"> <h2 class="bikes__title">move free</h2> <p class="bikes__subtitle"> Shift your ride, not gears. Find the fastest way to move in the city as the bike adapts intuitively to power the speed you need. </p> </div> <div class="bikes__slider"> <h2 class="bikes__slider-title">Compare Bikes</h2> <ul class="bikes__slider-list"> <li class="bikes__slider-item"> <img src="sporty-card1.495ab029.jpg" alt="Sporty 4 image" class="bikes__slider-item-img"> <p class="slider__card-title">Sporty 4</p> <p class="slider__card-subscribe"> The iconic frame brought to a new performance height as a sporty, active ride. </p> <p class="slider__card-price">$ 2 590</p> </li> <li class="bikes__slider-item"> <img src="town-rider-card2.a6643578.jpg" alt="Ride in town ST image" class="bikes__slider-item-img"> <p class="slider__card-title">Ride in town ST</p> <p class="slider__card-subscribe"> An open frame for an upright riding position as the most comfortable ride in town. </p> <p class="slider__card-price">$ 2 590</p> </li> <li class="bikes__slider-item"> <img src="agile-card3.08b26a11.jpg" alt="Agile ride 3 image" class="bikes__slider-item-img"> <p class="slider__card-title">Agile ride 3</p> <p class="slider__card-subscribe"> The lightweight frame that has earned its street tread as a sleek, agile ride. </p> <p class="slider__card-price">$ 2 090</p> </li> </ul> </div> </section>   <section class="animation--slide-right details section" id="details"> <h2 class="details__title">the details</h2> <div class="details__advantage-wrapp"> <div class="details__advantage-photoframe"> <img src="auto-unlock1-desktop.e313fba2.webp" alt="phone-holder" class="details_advantage-photo"> <img src="auto-unlock2-desktop.f0428ad8.webp" alt="brake-levers" class="details_advantage-photo"> </div> <div class="details__advantage-info"> <h3 class="details__advantage-title">Auto Unlock</h3> <p class="details__advantage-description"> The app senses when you're nearby to unlock automatically. GPS tracking so you know where your bike is and can track it anytime. </p> </div> </div> <div class="details__advantage-wrapp"> <div class="details__advantage-photoframe"> <img src="lights1-desktop.6cce42d9.webp" alt="backLights" class="details_advantage-photo"> <img src="lights2-desktop.7b54ae62.webp" alt="frontLigths" class="details_advantage-photo"> </div> <div class="details__advantage-info"> <h3 class="details__advantage-title">Range & Integrated lights</h3> <p class="details__advantage-description"> The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night. </p> </div> </div> <div class="details__advantage-wrapp"> <div class="details__advantage-photoframe"> <img src="brakes2-desktop.a238e3fc.webp" alt="frontLigths" class="details_advantage-photo"> <img src="brakes1-desktop.d901f522.webp" alt="backLights" class="details_advantage-photo"> </div> <div class="details__advantage-info"> <h3 class="details__advantage-title"> Hydraulic disc brakes & Lightweight </h3> <p class="details__advantage-description"> Brakes with total stopping power the second you make contact. The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night. </p> </div> </div> <button class="details__button-explore">Explore</button> </section>   <section class="animation--fog contacts section" id="contacts"> <h2 class="contacts__title">Contact Us</h2> <div class="contacts__wrapper"> <form class="contacts__form" method="post" onsubmit="this.reset(); return false;"> <input type="text" class="contacts__name form__input input-name" name="contacts__name" placeholder="Name" required> <input type="email" class="contacts__email form__input input-email" name="contacts__email" placeholder="Email" required> <textarea name="contacts__message" class="contacts__message form__input input-message" id="contacts__message" placeholder="Message" required></textarea> <button formaction="https://httpbin.org/post" type="submit" class="btn-send form__btn"> Send </button> </form> <address class="business-card"> <div class="business-card__phone-wrapper"> <p class="business-card-label pnone-label">phone</p> <a href="tel: +123455555555" class="business-card-phone"> +1 234 5555-55-55 </a> </div> <div class="email-wrapper"> <p class="business-card-label email-label">email</p> <a href="mailto:hello@miami.com" class="business-card-email"> hello@miami.com </a> </div> <div class="address-wrapper"> <p class="address-label business-card-label">address</p> <a target="_blank" href="https://maps.app.goo.gl/8so69WYqQd9UQMY58" class="business-card-address"> 400 first ave. <br> suite 700 <br> Minneapolis, MN 55401 </a> </div> </address> </div> </section>  </div> </main> <footer class="footer"></footer> <script src="layout_landing-page.4f128660.js" defer></script> </body></html>
