changed fog for pop up menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="body" id="home">
 
     <!-- #region Pop-up -->
-    <div class="pop-up__menu close fog">
+    <div class="pop-up__menu close pop-up--fog is-visible">
       <div class="pop-up__head">
         <div class="pop-up__logo-wrapper">
           <img src="/MyBiKE-black.0b32e6c9.svg" alt="MyBike Logo black color" class="pop-up__logo">
