picture tags added for better optimization

--- a/index.html
+++ b/index.html
@@ -145,8 +145,32 @@
           <h2 class="details__title">the details</h2>
           <div class="details__advantage-wrapp">
             <div class="details__advantage-photoframe">
-              <img src="/auto-unlock1-desktop.4e2506bf.webp" alt="phone-holder" class="details_advantage-photo">
-              <img src="/auto-unlock2-desktop.7305133b.webp" alt="brake-levers" class="details_advantage-photo">
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/auto-unlock1-desktop.4e2506bf.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/auto-unlock1-tablet.272ddfdd.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/auto-unlock1-mobile.6d0f1892.webp">
+
+                <!-- Фолбек -->
+                <img src="/auto-unlock1-desktop.4e2506bf.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/auto-unlock2-desktop.7305133b.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/auto-unlock2-tablet.225513a7.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/auto-unlock2-mobile.b723a8e8.webp">
+
+                <!-- Фолбек -->
+                <img src="/auto-unlock2-desktop.7305133b.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
             </div>
             <div class="details__advantage-info">
               <h3 class="details__advantage-title">Auto Unlock</h3>
@@ -156,10 +180,35 @@
               </p>
             </div>
           </div>
+
           <div class="details__advantage-wrapp">
             <div class="details__advantage-photoframe">
-              <img src="/lights1-desktop.4374eb94.webp" alt="backLights" class="details_advantage-photo">
-              <img src="/lights2-desktop.622c0782.webp" alt="frontLigths" class="details_advantage-photo">
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/lights1-desktop.4374eb94.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/lights1-tablet.1a487f6b.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/lights1-mobile.d4d6a076.webp">
+
+                <!-- Фолбек -->
+                <img src="/lights1-desktop.4374eb94.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/lights2-desktop.622c0782.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/lights2-tablet.10d24ef4.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/lights2-mobile.26710c89.webp">
+
+                <!-- Фолбек -->
+                <img src="/lights2-desktop.622c0782.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
             </div>
 
             <div class="details__advantage-info">
@@ -173,8 +222,32 @@
           </div>
           <div class="details__advantage-wrapp ">
             <div class="details__advantage-photoframe">
-              <img src="/brakes2-desktop.6e4d7d8f.webp" alt="frontLigths" class="details_advantage-photo">
-              <img src="/brakes1-desktop.556ac431.webp" alt="backLights" class="details_advantage-photo">
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/brakes1-desktop.556ac431.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/brakes1-tablet.090b975c.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/brakes1-mobile.dd8bb353.webp">
+
+                <!-- Фолбек -->
+                <img src="/brakes1-desktop.556ac431.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
+              <picture>
+                <!-- Десктоп (від 1024px) -->
+                <source media="(min-width: 1024px)" srcset="/brakes2-desktop.6e4d7d8f.webp">
+
+                <!-- Планшет (від 744px) -->
+                <source media="(min-width: 744px)" srcset="/brakes2-tablet.2d70085d.webp">
+
+                <!-- Мобілка (від 320px) -->
+                <source media="(min-width: 320px)" srcset="/brakes2-mobile.e5210c96.webp">
+
+                <!-- Фолбек -->
+                <img src="/brakes2-desktop.6e4d7d8f.webp" alt="phone-holder" class="details_advantage-photo">
+              </picture>
             </div>
             <div class="details__advantage-info">
               <h3 class="details__advantage-title">
